--- a/assets/css/inventory-manager.css
+++ b/assets/css/inventory-manager.css
@@ -285,6 +285,10 @@
     border: 1px solid #ddd;
     border-radius: 4px;
     overflow: hidden;
+    box-shadow: 0 15px 10px rgba(20.1, 12.1, 26.1, 0.4);
+}
+.inventory-manager .batch-section:hover{
+    box-shadow: 2px 1px 2px 5px rgba(0.1, 0.1, 0.1, 0.2);
 }
 
 .inventory-manager .product-header {
@@ -292,8 +296,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 15px;
-    background-color: #f2f2f2;
+    background-color: #ddece2;
     border-bottom: 1px solid #ddd;
+    cursor: pointer;
 }
 
 .inventory-manager .product-info {
@@ -342,6 +347,7 @@
     padding: 10px;
     background-color: #f9f9f9;
     border-bottom: 1px solid #ddd;
+    cursor: pointer;
 }
 
 .inventory-manager .batch-header > div {
