--- a/assets/css/inventory-manager.css
+++ b/assets/css/inventory-manager.css
@@ -296,9 +296,15 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 15px;
-    background-color: #ddece2;
+    /* background-color: #000000; */
     border-bottom: 1px solid #ddd;
     cursor: pointer;
+}
+.product-header .label{
+    color:#ffffff !important;
+}
+.batch-header .label, .batch-header .value{
+    color:#ffffff !important;
 }
 
 .inventory-manager .product-info {
@@ -316,7 +322,7 @@
 .inventory-manager .product-header .toggle-icon {
     margin-left: auto;
     font-size: 20px;
-    line-height: 1;
+    line-height: 0;
     align-self: center;
     display: inline-block;
 }
@@ -353,7 +359,7 @@
     display: flex;
     flex-wrap: wrap;
     padding: 10px;
-    background-color: #f9f9f9;
+    background-color: #f41b1b;
     border-bottom: 1px solid #ddd;
     cursor: pointer;
 }
@@ -621,7 +627,52 @@
 .w-100{
     width: 100%;
 }
-
+.inv-product-info{
+    display: flex; font-size: 28px; font-weight: 500; text-align: center;
+}
+.inv-product-info span{
+    flex: 1;
+}
+.product-summary>div {
+    background-color: #000000;
+    color: #ffffff;
+    padding: 5px 20px;
+    border-radius: 10px;
+}
+.product-summary {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; /* optional spacing */
+    margin-bottom: 1rem;
+  }
+  
+  .product-summary > div {
+    flex: 1 1 16.66%; /* 100% ÷ 5 = 20% */
+    min-width: 0;
+    box-sizing: border-box;
+    padding: 10px;
+    border: 1px solid #eee;
+    text-align: center;
+  }
+  
+  .product-summary .label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 4px;
+  }
+  
+  .product-summary .value {
+    display: block;
+    font-size: 1.2em;
+  }
+  #add-batch-btn{
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 24px;
+    text-transform: uppercase;
+    margin-top: 18px;
+    padding: 4px 18px;
+  }
 /* Responsive adjustments */
 @media (max-width: 768px) {
     .inventory-manager .filters-row {
