--- a/assets/css/inventory-manager.css
+++ b/assets/css/inventory-manager.css
@@ -143,7 +143,7 @@
 }
 
 .inventory-manager .expiry-filters input[type="checkbox"]:checked + span {
-    border-color: currentColor;
+    border-color: #000000;
     border-width: 2px;
 }
 
