--- a/assets/css/inventory-manager.css
+++ b/assets/css/inventory-manager.css
@@ -386,7 +386,7 @@
 
 .inventory-manager .batch-header > div {
     flex: 1;
-    min-width: 150px;
+    /* min-width: 150px; */
     margin-right: 10px;
 }
 
