--- a/assets/css/inventory-manager.css
+++ b/assets/css/inventory-manager.css
@@ -621,15 +621,15 @@
 }
 
 .stock-note.in-stock {
-    background-color: #e8f5e9;
+    background-color: transparent;
 }
 
 .stock-note.stock-qty {
-    background-color: #f5f5f5;
+    background-color: transparent;
 }
 
 .stock-note.backorder {
-    background-color: #fff8e1;
+    background-color: transparent;
 }
 
 .backorder-popup {
