--- a/assets/css/inventory-manager.css
+++ b/assets/css/inventory-manager.css
@@ -602,7 +602,8 @@
     padding: 10px;
     border: 1px solid #f0f0f0;
     border-radius: 4px;
-    background-color: #fafafa;
+    background-color: transparent;
+    font-size: 12px;
 }
 
 .inventory-batch-info .batch-info-field {
@@ -610,14 +611,15 @@
 }
 
 .inventory-batch-info .label {
-    font-weight: 600;
+    /* font-weight: 600; */
     margin-right: 5px;
     display: block;
+    padding-left: 0px;
 }
 
 .stock-note {
-    margin: 10px 0;
-    padding: 5px 10px;
+    margin: 0px 10px 0px 0px;
+    padding: 0px 0px;
     border-radius: 4px;
     display: inline-block;
 }
